# bridgeai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eval_report.json  pyproject.toml  pytest.ini  railway.toml  test_browser.py
.claude/: settings.json  settings.local.json
.claude/agents/: api-route-builder.md  clean-arch-guardian.md  domain-modeler.md  nextjs-frontend-builder.md  phase-implementer.md  security-guardian.md  test-specialist.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 332bc705e042_initial_multitenant_schema.py  719f4fee3415_add_redirect_uri_to_oauth_states.py  (+24 more)
app/: main.py
docs/: WORKFLOW_GUIDE.md  arquitectura.md  bridgeai-comercial.md  db.md  metricas.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: encrypt_existing_content.py
tests/: README.md  conftest.py  test_ai_providers.py  test_ai_story_generator.py  test_azure_devops_provider.py  test_code_indexing_service.py  test_health.py  test_impact_analysis_endpoint.py  test_impact_analysis_service.py  test_indexing_endpoint.py  test_jira_provider.py  test_requirement_repository.py  test_requirement_understanding_endpoint.py  test_requirement_understanding_service.py  test_story_ai_providers.py  test_story_generation_endpoint.py  test_story_generation_service.py  test_ticket_hardening.py  test_ticket_integration_endpoint.py  test_ticket_integration_service.py  test_user_story_repository.py
ui/: app.py
(+228 files in other folders)
