[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgeai"
version = "0.1.0"
description = "BridgeAI - AI-powered code analysis and User Story generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
